Added ClusterSchemaBoard and ClusterScriptBoard.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -52,6 +52,8 @@ cluster-dispatcher {
   }
 }
 
+akka.extensions = ["akka.contrib.pattern.DistributedPubSubExtension"]
+
 akka.remote.netty.tcp {
   hostname = "127.0.0.1"
   port = 2554
