Tried to use gossip to broadcast schemas and scripts.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -43,6 +43,52 @@ akka.actor {
   }
 }
 
+# //#schema-board-ext-config
+# Settings for the DistributedSchemaBoardExtension
+wandou.astore.schema-board {
+  # Actor name of the schema board actor, /user/distributedSchemaBoard
+  name = distributedSchemaBoard
+
+  # Start the mediator on members tagged with this role.
+  # All members are used if undefined or empty.
+  role = ""
+  
+  # How often the DistributedBoard should send out gossip information
+  gossip-interval = 1s
+
+  # Removed entries are pruned after this duration
+  removed-time-to-live = 120s
+  
+  # Maximum number of elements to transfer in one message when synchronizing the registries.
+  # Next chunk will be transferred in next round of gossip. 
+  max-delta-elements = 3000
+  
+}
+# //#schema-board-ext-config
+
+# //#script-borad-ext-config
+# Settings for the DistributedScriptBoardExtension
+wandou.astore.script-board {
+  # Actor name of the script board actor, /user/distributedScriptBoard
+  name = distributedScriptBoard
+
+  # Start the mediator on members tagged with this role.
+  # All members are used if undefined or empty.
+  role = ""
+  
+  # How often the DistributedBoard should send out gossip information
+  gossip-interval = 1s
+
+  # Removed entries are pruned after this duration
+  removed-time-to-live = 120s
+  
+  # Maximum number of elements to transfer in one message when synchronizing the registries.
+  # Next chunk will be transferred in next round of gossip. 
+  max-delta-elements = 3000
+  
+}
+# //##script-borad-ext-config
+
 cluster-dispatcher {
   type = "Dispatcher"
   executor = "fork-join-executor"
