Added multi-node spec for AStore cluster.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -36,10 +36,12 @@ akka {
 akka.actor {
   serializers {
     avro = "wandou.astore.serializer.AvroSerializer"
+    avroschema = "wandou.astore.serializer.AvroSchemaSerializer"
   }
   serialization-bindings {
     "org.apache.avro.generic.GenericData$Record" = avro
     "org.apache.avro.generic.GenericRecord" = avro
+    "org.apache.avro.Schema" = avroschema
   }
 }
 
@@ -100,21 +102,11 @@ cluster-dispatcher {
 
 akka.extensions = ["akka.contrib.pattern.DistributedPubSubExtension"]
 
-akka.remote.netty.tcp {
-  hostname = "127.0.0.1"
-  port = 2554
-}
-akka.cluster.seed-nodes = ["akka.tcp://AStoreSystem@127.0.0.1:2554", "akka.tcp://AStoreSystem@127.0.0.1:2555"]
-
-akka.cluster.roles = ["entity"]
-akka.contrib.cluster.sharding.role  = "entity"
-
-
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 akka.persistence.journal.leveldb.native = off
 
-web {
+wandou.astore.web {
   hostname = "127.0.0.1"
   port = 8080
 }
