--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,7 +5,7 @@ akka {
 
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
-  log-config-on-start = on
+  log-config-on-start = off
 
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
