Automatically Loading extensions DistributedSchemaBoard, DistributedScriptBoard from Configuration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,6 +33,15 @@ akka {
   contrib.cluster.pub-sub.gossip-interval = 3s  # default 1s
 }
 
+cluster-dispatcher {
+  type = "Dispatcher"
+  executor = "fork-join-executor"
+  fork-join-executor {
+    parallelism-min = 2
+    parallelism-max = 4
+  }
+}
+
 akka.actor {
   serializers {
     avro = "wandou.astore.serializer.AvroSerializer"
@@ -91,16 +100,10 @@ wandou.astore.script-board {
 }
 # //##script-borad-ext-config
 
-cluster-dispatcher {
-  type = "Dispatcher"
-  executor = "fork-join-executor"
-  fork-join-executor {
-    parallelism-min = 2
-    parallelism-max = 4
-  }
-}
-
-akka.extensions = ["akka.contrib.pattern.DistributedPubSubExtension"]
+akka.extensions = [
+  "wandou.astore.schema.DistributedSchemaBoard",
+  "wandou.astore.script.DistributedScriptBoard"
+]
 
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
