--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: scala
 scala:
 - 2.11.4
 jdk:
-- openjdk7
+- oraclejdk8
 script:
 - sbt ++$TRAVIS_SCALA_VERSION compile test:compile
 - sbt ++$TRAVIS_SCALA_VERSION test
