Removed schema serializer.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -45,12 +45,9 @@ cluster-dispatcher {
 akka.actor {
   serializers {
     avro = "wandou.astore.serializer.AvroSerializer"
-    avroschema = "wandou.astore.serializer.AvroSchemaSerializer"
   }
   serialization-bindings {
-    "org.apache.avro.generic.GenericData$Record" = avro
-    "org.apache.avro.generic.GenericRecord" = avro
-    "org.apache.avro.Schema" = avroschema
+    "org.apache.avro.generic.IndexedRecord" = avro
   }
 }
 
