configuration for performance.

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -1,3 +1,22 @@
+akka {
+  actor.default-dispatcher {
+    fork-join-executor {
+      parallelism-min = 1
+      parallelism-factor = 1
+      #parallelism-max = 24
+    }
+  }
+}
+
+spray.can.server {
+  pipelining-limit = disabled
+  reaping-cycle = infinite
+  request-chunk-aggregation-limit = 0
+  stats-support = off
+  response-size-hint = 192
+}
+
+
 akka.remote.netty.tcp.hostname = "127.0.0.1"
 akka.remote.netty.tcp.port = 2551
 
