Configuration according to benchmark adjustment.

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -1,9 +1,9 @@
 akka {
   actor.default-dispatcher {
     fork-join-executor {
-      parallelism-min = 1
       parallelism-factor = 1
-      #parallelism-max = 24
+      parallelism-min = 1
+      parallelism-max = 6 # best for a 12 physical cores machine
     }
   }
 }
