Some useful configurations.

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -5,7 +5,13 @@ akka {
       parallelism-min = 1
       parallelism-max = 6 # best for a 12 physical cores machine
     }
+    throughput = 100
   }
+}
+
+akka.io.tcp {
+  max-channels = 921600
+  nr-of-selectors = 1
 }
 
 spray.can.server {
@@ -24,3 +30,9 @@ akka.cluster.seed-nodes = ["akka.tcp://AStoreSystem@127.0.0.1:2551", "akka.tcp:/
 
 akka.cluster.roles = ["entity"]
 akka.contrib.cluster.sharding.role  = "entity"
+
+wandou.astore.web {
+  hostname = "127.0.0.1"
+  port = 8080
+}
+
