Should register a new route worker for each connection.

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -32,7 +32,7 @@ akka.cluster.roles = ["entity"]
 akka.contrib.cluster.sharding.role  = "entity"
 
 wandou.astore.web {
-  hostname = "127.0.0.1"
+  interface = "127.0.0.1"
   port = 8080
 }
 
