--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,3 +5,8 @@ akka.cluster.seed-nodes = ["akka.tcp://AStoreSystem@127.0.0.1:2551", "akka.tcp:/
 
 akka.cluster.roles = ["entity"]
 akka.contrib.cluster.sharding.role  = "entity"
+
+wandou.astore.web {
+  interface = "127.0.0.1"
+  port = 8080
+}
