--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -106,8 +106,11 @@ akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 akka.persistence.journal.leveldb.native = off
 
+akka.cluster.roles = ["entity"]
+akka.contrib.cluster.sharding.role  = "entity"
+
 wandou.astore.web {
-  hostname = "127.0.0.1"
+  interface = "127.0.0.1"
   port = 8080
 }
 
