--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -45,9 +45,13 @@ cluster-dispatcher {
 akka.actor {
   serializers {
     avro = "wandou.astore.serializer.AvroSerializer"
+    event= "wandou.astore.serializer.EventSerializer"
+    writemessages = "akka.persistence.serialization.WriteMessagesSerializer"
   }
   serialization-bindings {
-    "org.apache.avro.generic.IndexedRecord" = avro
+    "org.apache.avro.generic.GenericContainer" = avro
+    "wandou.astore.package$UpdatedFields" = event
+    "akka.persistence.journal.AsyncWriteTarget$WriteMessages" = writemessages
   }
 }
 
