Added dependency on akka-persistence-cassandra

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -36,3 +36,5 @@ wandou.astore.web {
   port = 8080
 }
 
+#akka.persistence.journal.plugin = "cassandra-journal"
+#akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
