persist schema. use cassandra as deployed journal and snapshot store.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -45,12 +45,16 @@ cluster-dispatcher {
 akka.actor {
   serializers {
     avro = "wandou.astore.serializer.AvroSerializer"
-    event= "wandou.astore.serializer.EventSerializer"
+    schema = "wandou.astore.serializer.SchemaSerializer"
+    record-event= "wandou.astore.serializer.RecordEventSerializer"
+    addschema-event= "wandou.astore.serializer.AddSchemaEventSerializer"
     writemessages = "akka.persistence.serialization.WriteMessagesSerializer"
   }
   serialization-bindings {
     "org.apache.avro.generic.GenericContainer" = avro
-    "wandou.astore.package$UpdatedFields" = event
+    "org.apache.avro.Schema" = schema
+    "wandou.astore.package$UpdatedFields" = record-event
+    "wandou.astore.package$AddSchema" = addschema-event
     "akka.persistence.journal.AsyncWriteTarget$WriteMessages" = writemessages
   }
 }
