Set sharding.role in application.conf instead of reference.conf, to avoid transitive to dependencies.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -92,8 +92,9 @@ akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 akka.persistence.journal.leveldb.native = off
 
-akka.cluster.roles = ["entity"]
-akka.contrib.cluster.sharding.role  = "entity"
+# Must set in application.conf. And if we set here, it will be transitive to dependencies.
+# akka.cluster.roles = ["entity"]
+# akka.contrib.cluster.sharding.role = "entity"
 
 wandou.astore.web {
   interface = "127.0.0.1"
