comments cassandra persistence.(fall back to leveldb)

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -31,16 +31,16 @@ akka.cluster.seed-nodes = ["akka.tcp://AStoreSystem@127.0.0.1:2551", "akka.tcp:/
 akka.cluster.roles = ["entity"]
 akka.contrib.cluster.sharding.role = "entity"
 
-akka.persistence.journal.plugin = "cassandra-journal"
-akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
-cassandra-journal {
-  contact-points = [PLACEHOLDER]
-  keyspace = "astore"
-}
-cassandra-snapshot-store {
-  contact-points = [PLACEHOLDER]
-  keyspace = "astore"
-}
+#akka.persistence.journal.plugin = "cassandra-journal"
+#akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
+#cassandra-journal {
+#  contact-points = [PLACEHOLDER]
+#  keyspace = "astore"
+#}
+#cassandra-snapshot-store {
+#  contact-points = [PLACEHOLDER]
+#  keyspace = "astore"
+#}
 
 wandou.astore.web {
   interface = "127.0.0.1"
