Added serializer for java map. closed #7.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -46,6 +46,7 @@ akka.actor {
   serializers {
     avro = "wandou.astore.serializer.AvroSerializer"
     schema = "wandou.astore.serializer.SchemaSerializer"
+    java-map = "wandou.astore.serializer.JavaMapSerializer"
     record-event= "wandou.astore.serializer.RecordEventSerializer"
     addschema-event= "wandou.astore.serializer.AddSchemaEventSerializer"
     writemessages = "akka.persistence.serialization.WriteMessagesSerializer"
