Fixed case of infinite duration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -84,6 +84,11 @@ wandou.astore.script-board {
 }
 # //##script-borad-ext-config
 
+wandou.astore.persistence {
+  persistent = off
+  nrOfEventsBetweenSnapshots = 200
+}
+
 akka.extensions = [
   "wandou.astore.schema.DistributedSchemaBoard",
   "wandou.astore.script.DistributedScriptBoard"
