Share same persistentId for all DistributedSchemaBoard actors.

--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -42,8 +42,13 @@ akka.contrib.cluster.sharding.role = "entity"
 #  keyspace = "astore"
 #}
 
+wandou.astore.persistence {
+  persistent = off
+}
+
 wandou.astore.web {
   interface = "127.0.0.1"
   port = 8080
 }
+
 
