Renamed project from astore to chana

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -44,25 +44,25 @@ cluster-dispatcher {
 
 akka.actor {
   serializers {
-    avro = "wandou.astore.serializer.AvroSerializer"
-    schema = "wandou.astore.serializer.SchemaSerializer"
-    java-map = "wandou.astore.serializer.JavaMapSerializer"
-    record-event= "wandou.astore.serializer.RecordEventSerializer"
-    schema-event= "wandou.astore.serializer.SchemaEventSerializer"
+    avro = "chana.serializer.AvroSerializer"
+    schema = "chana.serializer.SchemaSerializer"
+    java-map = "chana.serializer.JavaMapSerializer"
+    record-event= "chana.serializer.RecordEventSerializer"
+    schema-event= "chana.serializer.SchemaEventSerializer"
     writemessages = "akka.persistence.serialization.WriteMessagesSerializer"
   }
   serialization-bindings {
     "org.apache.avro.generic.GenericContainer" = avro
     "org.apache.avro.Schema" = schema
-    "wandou.astore.package$UpdatedFields" = record-event
-    "wandou.astore.package$PutSchema" = schema-event
+    "chana.package$UpdatedFields" = record-event
+    "chana.package$PutSchema" = schema-event
     "akka.persistence.journal.AsyncWriteTarget$WriteMessages" = writemessages
   }
 }
 
 # //#schema-board-ext-config
 # Settings for the DistributedSchemaBoardExtension
-wandou.astore.schema-board {
+chana.schema-board {
   # Actor name of the schema board actor, /user/distributedSchemaBoard
   name = distributedSchemaBoard
 
@@ -74,7 +74,7 @@ wandou.astore.schema-board {
 
 # //#script-borad-ext-config
 # Settings for the DistributedScriptBoardExtension
-wandou.astore.script-board {
+chana.script-board {
   # Actor name of the script board actor, /user/distributedScriptBoard
   name = distributedScriptBoard
 
@@ -84,14 +84,14 @@ wandou.astore.script-board {
 }
 # //##script-borad-ext-config
 
-wandou.astore.persistence {
+chana.persistence {
   persistent = off
   nrOfEventsBetweenSnapshots = 200
 }
 
 akka.extensions = [
-  "wandou.astore.schema.DistributedSchemaBoard",
-  "wandou.astore.script.DistributedScriptBoard"
+  "chana.schema.DistributedSchemaBoard",
+  "chana.script.DistributedScriptBoard"
 ]
 
 akka.persistence.journal.leveldb.dir = "target/journal"
@@ -102,7 +102,7 @@ akka.persistence.journal.leveldb.native = off
 # akka.cluster.roles = ["entity"]
 # akka.contrib.cluster.sharding.role = "entity"
 
-wandou.astore.web {
+chana.web {
   interface = "127.0.0.1"
   port = 8080
 }
