--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -26,7 +26,7 @@ spray.can.server {
 akka.remote.netty.tcp.hostname = "127.0.0.1"
 akka.remote.netty.tcp.port = 2551
 
-akka.cluster.seed-nodes = ["akka.tcp://AStoreSystem@127.0.0.1:2551", "akka.tcp://AStoreSystem@127.0.0.1:2551"]
+akka.cluster.seed-nodes = ["akka.tcp://ChanaSystem@127.0.0.1:2551", "akka.tcp://ChanaSystem@127.0.0.1:2551"]
 
 akka.cluster.roles = ["entity"]
 akka.contrib.cluster.sharding.role = "entity"
@@ -35,18 +35,18 @@ akka.contrib.cluster.sharding.role = "entity"
 #akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
 #cassandra-journal {
 #  contact-points = [PLACEHOLDER]
-#  keyspace = "astore"
+#  keyspace = "chana"
 #}
 #cassandra-snapshot-store {
 #  contact-points = [PLACEHOLDER]
-#  keyspace = "astore"
+#  keyspace = "chana"
 #}
 
-wandou.astore.persistence {
+chana.persistence {
   persistent = off
 }
 
-wandou.astore.web {
+chana.web {
   interface = "127.0.0.1"
   port = 8080
 }
