Imported timeseries classes from wandou-math.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -10,12 +10,14 @@ akka {
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
   }
+
   remote {
     transport-failure-detector {
       heartbeat-interval = 4 s   # default 4s
       acceptable-heartbeat-pause = 10 s  # default 10s
     }
   }
+
   cluster {
     auto-down-unreachable-after = off
     metrics.enabled = off
@@ -30,6 +32,7 @@ akka {
     }
     use-dispatcher = cluster-dispatcher
   }
+
   contrib.cluster.pub-sub.gossip-interval = 3s  # default 1s
 }
 
@@ -107,3 +110,6 @@ chana.web {
   port = 8080
 }
 
+chana.reactor {
+  publisher.routing-logic = "round-robin"
+}
