--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -87,6 +87,18 @@ chana.script-board {
 }
 # //##script-borad-ext-config
 
+# //#jpql-borad-ext-config
+# Settings for the DistributedJPQLBoardExtension
+chana.jpql-board {
+  # Actor name of the JPQL board actor, /user/distributedJPQLBoard
+  name = distributedJPQLBoard
+
+  # Start the mediator on members tagged with this role.
+  # All members are used if undefined or empty.
+  role = ""
+}
+# //##JPQL-borad-ext-config
+
 chana.persistence {
   persistent = off
   nrOfEventsBetweenSnapshots = 200
