Upgraded to akka-stream & akka-http 1.0

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -97,7 +97,7 @@ chana.jpql-board {
   # All members are used if undefined or empty.
   role = ""
 }
-# //##JPQL-borad-ext-config
+# //##jpql-borad-ext-config
 
 chana.persistence {
   persistent = off
