--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -58,7 +58,7 @@ akka.actor {
                                          
   serialization-bindings {
     "akka.persistence.journal.AsyncWriteTarget$WriteMessages" = writemessages
-    "chana.jpql.ProjectionWithId" = avro-projection
+    "chana.jpql.AvroProjection" = avro-projection
     "chana.package$UpdatedFields" = record-event
     "chana.package$PutSchema" = schema-event
     "org.apache.avro.generic.GenericContainer" = avro
