--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -28,7 +28,7 @@ akka.remote.netty.tcp.port = 2551
 
 akka.cluster.seed-nodes = ["akka.tcp://ChanaSystem@127.0.0.1:2551", "akka.tcp://ChanaSystem@127.0.0.1:2551"]
 
-akka.cluster.roles = ["entity"]
+akka.cluster.roles = ["entity", "jpql"]
 akka.contrib.cluster.sharding.role = "entity"
 
 #akka.persistence.journal.plugin = "cassandra-journal"
