Split methods: putField, putFieldJson

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ akka.remote.netty.tcp.port = 2551
 
 akka.cluster.seed-nodes = ["akka.tcp://ChanaSystem@127.0.0.1:2551", "akka.tcp://ChanaSystem@127.0.0.1:2551"]
 
-akka.cluster.roles = ["entity"]
+akka.cluster.roles = ["entity", "jpql"]
 akka.contrib.cluster.sharding.role = "entity"
 
 chana.web {
