Renamed default roles from "entity", "jpql" to "chana-entity", "chana-jpql"

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -117,8 +117,8 @@ akka.persistence.snapshot-store.local.dir = "target/snapshots"
 akka.persistence.journal.leveldb.native = off
 
 # Must set in application.conf. And if we set here, it will be transitive to dependencies.
-# akka.cluster.roles = ["entity"]
-# akka.contrib.cluster.sharding.role = "entity"
+# akka.cluster.roles = ["chana-entity, chana-jpql"]
+# akka.contrib.cluster.sharding.role = "chana-entity"
 
 chana.web {
   interface = "127.0.0.1"
