--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,8 @@ akka.remote.netty.tcp.port = 2551
 
 akka.cluster.seed-nodes = ["akka.tcp://ChanaSystem@127.0.0.1:2551", "akka.tcp://ChanaSystem@127.0.0.1:2551"]
 
-akka.cluster.roles = ["entity", "jpql"]
-akka.contrib.cluster.sharding.role = "entity"
+akka.cluster.roles = ["chana-entity", "chana-jpql"]
+akka.contrib.cluster.sharding.role = "chana-entity"
 
 chana.web {
   interface = "127.0.0.1"
