Preliminary Binlog serializer

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -49,17 +49,19 @@ akka.actor {
   serializers {
     avro = "chana.serializer.AvroSerializer"
     avro-projection = "chana.serializer.AvroProjectionSerializer"
+    binlog = "chana.serializer.BinlogSerializer"
     java-map = "chana.serializer.JavaMapSerializer"
-    record-event= "chana.serializer.RecordEventSerializer"
     schema = "chana.serializer.SchemaSerializer"
     schema-event= "chana.serializer.SchemaEventSerializer"
+    update-event = "chana.serializer.UpdateEventSerializer"
     writemessages = "akka.persistence.serialization.WriteMessagesSerializer"
   }
                                          
   serialization-bindings {
     "akka.persistence.journal.AsyncWriteTarget$WriteMessages" = writemessages
+    "chana.avro.package$Binlog" = binlog
+    "chana.avro.package$UpdateEvent" = update-event
     "chana.jpql.AvroProjection" = avro-projection
-    "chana.package$UpdatedFields" = record-event
     "chana.package$PutSchema" = schema-event
     "org.apache.avro.generic.GenericContainer" = avro
     "org.apache.avro.Schema" = schema
