Split Binlog.scala

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -59,8 +59,8 @@ akka.actor {
                                          
   serialization-bindings {
     "akka.persistence.journal.AsyncWriteTarget$WriteMessages" = writemessages
-    "chana.avro.package$Binlog" = binlog
-    "chana.avro.package$UpdateEvent" = update-event
+    "chana.avro.Binlog" = binlog
+    "chana.avro.UpdateEvent" = update-event
     "chana.jpql.AvroProjection" = avro-projection
     "chana.package$PutSchema" = schema-event
     "org.apache.avro.generic.GenericContainer" = avro
