Migrated to akka 2.4.x

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -110,13 +110,15 @@ chana.persistence {
 }
 
 akka.extensions = [
+  "akka.cluster.client.ClusterClientReceptionist"
   "chana.schema.DistributedSchemaBoard",
   "chana.script.DistributedScriptBoard"
 ]
 
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.journal.leveldb.dir = "target/journal"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
 akka.persistence.journal.leveldb.native = off
+akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
 # Must set in application.conf. And if we set here, it will be transitive to dependencies.
 # akka.cluster.roles = ["chana-entity, chana-jpql"]
