--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -110,9 +110,10 @@ chana.persistence {
 }
 
 akka.extensions = [
-  "akka.cluster.client.ClusterClientReceptionist"
+  "akka.cluster.client.ClusterClientReceptionist",
   "chana.schema.DistributedSchemaBoard",
-  "chana.script.DistributedScriptBoard"
+  "chana.script.DistributedScriptBoard",
+  "chana.jpql.DistributedJPQLBoard"
 ]
 
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
