Fixed property name of "cluster.sharing.role"

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka.remote.netty.tcp.port = 2551
 akka.cluster.seed-nodes = ["akka.tcp://ChanaSystem@127.0.0.1:2551", "akka.tcp://ChanaSystem@127.0.0.1:2551"]
 
 akka.cluster.roles = ["chana-entity", "chana-jpql"]
-akka.contrib.cluster.sharding.role = "chana-entity"
+akka.cluster.sharding.role = "chana-entity"
 
 chana.web {
   interface = "127.0.0.1"
