--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -33,7 +33,7 @@ akka {
     use-dispatcher = cluster-dispatcher
   }
 
-  contrib.cluster.pub-sub.gossip-interval = 3s  # default 1s
+  cluster.pub-sub.gossip-interval = 3s  # default 1s
 }
 
 cluster-dispatcher {
@@ -123,7 +123,7 @@ akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
 # Must set in application.conf. And if we set here, it will be transitive to dependencies.
 # akka.cluster.roles = ["chana-entity, chana-jpql"]
-# akka.contrib.cluster.sharding.role = "chana-entity"
+# akka.cluster.sharding.role = "chana-entity"
 
 chana.web {
   interface = "127.0.0.1"
