--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -29,7 +29,7 @@ akka.remote.netty.tcp.port = 2551
 akka.cluster.seed-nodes = ["akka.tcp://ChanaSystem@127.0.0.1:2551", "akka.tcp://ChanaSystem@127.0.0.1:2551"]
 
 akka.cluster.roles = ["chana-entity", "chana-jpql"]
-akka.contrib.cluster.sharding.role = "chana-entity"
+akka.cluster.sharding.role = "chana-entity"
 
 #akka.persistence.journal.plugin = "cassandra-journal"
 #akka.persistence.snapshot-store.plugin = "cassandra-snapshot-store"
