Make sure only one ActorMaterializer is created

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -119,6 +119,8 @@ akka.extensions = [
 akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.journal.leveldb.dir = "target/journal"
 akka.persistence.journal.leveldb.native = off
+
+akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
 # Must set in application.conf. And if we set here, it will be transitive to dependencies.
