--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,11 +1,15 @@
 akka {
-  loglevel = INFO
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  loglevel = "INFO"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  logger-startup-timeout = 30s
 
   # Log the complete configuration at INFO level when the actor system is started.
   # This is useful when you are uncertain of what configuration is used.
   log-config-on-start = off
+}
+
+akka {
 
   actor {
     provider = "akka.cluster.ClusterActorRefProvider"
